--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "AnkitKumar",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.1.4",
     "epxress": "^0.0.1-security",
     "express": "^4.18.2",
     "http-status-code": "^2.1.0",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.3.5",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.0",
