--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.1.4",
     "epxress": "^0.0.1-security",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.4.0",
+    "http-proxy-middleware": "^3.0.0",
     "http-status-code": "^2.1.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
